<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="clock">Clock</string>
    <string name="user">User</string>
    <string name="todo">TODO</string>
    <string name="home_page">Home Page</string>
    <string name="add_task">Add Task</string>
    <string name="go_to_sleep">go to sleep</string>
    <string name="description">Description</string>
    <string name="task_priority">\tTask Priority</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_category">Choose Category</string>
    <string name="university">University</string>
    <string name="add_category">Add Category</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_name_">Category name:</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon:</string>
    <string name="chose_icon_from_library">Chose icon from library</string>
    <string name="category_color">Category color:</string>
    <string name="chose_icon_category">Chose icon category</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_time">\tTask Time:</string>
    <string name="today_at">Today At</string>
    <string name="task_category">\tTask Category:</string>
    <string name="category">\tCategory</string>
    <string name="default_prio">Default\t</string>
    <string name="sub_task">\tSub - Task</string>
    <string name="add_sub_task">Add Sub - Task</string>
    <string name="tdisplay_category">\tdisplay category</string>
    <string name="subtask_name">Subtask Name</string>
    <string name="new_subtask">New subtask</string>>
</resources>