<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreen"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/calendarScreen"
        android:icon="@drawable/calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/dummySpace"
        android:icon="@drawable/transparent_icon"
        android:title=""
        android:enabled="false"
        android:checkable="false"
        android:visible="false" />
    <item
        android:id="@+id/clockScreen"
        android:icon="@drawable/clock"
        android:title="@string/clock" />
    <item
        android:id="@+id/userScreen"
        android:icon="@drawable/user"
        android:title="@string/user" />

</menu>