<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:padding="20dp"
    tools:context=".dialogfragment.CreateCategoryFragment">

    <TextView
        android:id="@+id/tv_create_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_input_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/category_name_"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_new_category" />

    <EditText
        android:id="@+id/et_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/category_name"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:maxLines="2"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="#ACA9A9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_input_category_name" />

    <TextView
        android:id="@+id/tv_category_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/category_icon"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_category_name" />

    <TextView
        android:id="@+id/chosen_category_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/chose_icon_category_background_btn"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/chose_icon_from_library"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_icon" />


    <TextView
        android:id="@+id/tv_category_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/category_color"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chosen_category_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_color"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_btn"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/transparent_icon"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/light_purple"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintDimensionRatio="1:0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"

        app:layout_constraintWidth_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>