<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.TaskDetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Task Detail"
        app:titleCentered="true"
        app:titleTextColor="@color/white">

        <ImageButton
            android:id="@+id/action_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_delete" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_task_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@null"
                android:hint="@string/task_title"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/cb_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cb_task"
                app:layout_constraintTop_toTopOf="@id/cb_task" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_task_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:hint="@string/description"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cb_task"
                app:layout_constraintTop_toBottomOf="@id/et_task_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_due_date"
                style="@style/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/et_task_description">

                <TextView
                    android:id="@+id/tv_title_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_time"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:drawableStartCompat="@drawable/ic_timer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chose_icon_category_background_btn"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/today_at"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_category"
                style="@style/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/cl_due_date">

                <TextView
                    android:id="@+id/tv_title_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_category"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:drawableStartCompat="@drawable/ic_tag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chose_icon_category_background_btn"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/category"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/category_bag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_priority"
                style="@style/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/cl_category">

                <TextView
                    android:id="@+id/tv_title_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_priority"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:drawableStartCompat="@drawable/ic_flag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chose_icon_category_background_btn"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/default_prio"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_subtask"
                style="@style/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/cl_priority">

                <TextView
                    android:id="@+id/tv_title_subtask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_task"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:drawableStartCompat="@drawable/ic_subtask"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_subtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/cl_subtask"

                />

            <EditText
                android:id="@+id/ed_add_subtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray"
                android:hint="@string/new_subtask"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textShortMessage|textNoSuggestions"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/rv_subtask" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>